--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <section class="tablero">
+      <div class="casilla" id="1"></div>
+      <div class="casilla" id="2"></div>
+      <div class="casilla" id="3"></div>
+      <div class="casilla" id="4"></div>
+      <div class="casilla" id="5"></div>
+      <div class="casilla" id="6"></div>
+      <div class="casilla" id="7"></div>
+      <div class="casilla" id="8"></div>
+      <div class="casilla" id="9"></div>
+    </section>
 </body>
 </html>
